added models and endpoints
