# python-fastapi-server/app/main.py
@@ -1,12 +1,17 @@
 # generated by fastapi-codegen:
 #   filename:  swagger.yaml
-#   timestamp: 2020-11-01T14:27:28+00:00
+#   timestamp: 2020-11-02T18:00:05+00:00
 
 from __future__ import annotations
 
 from fastapi import FastAPI
 
-from .models import Time
+from .models import (
+    SlotValidationFiniteValuesRequest,
+    SlotValidationnumericRequest,
+    SlotValidationResult,
+    Time,
+)
 
 try:
     from .implementation import Implementation
@@ -26,3 +31,17 @@ app = FastAPI(
 @app.get('/time/', response_model=Time)
 def get_time() -> Time:
     return implementation.get_time()
+
+
+@app.post('/validate-finite-values-entity/', response_model=SlotValidationResult)
+def validate_finite_values_entity(
+    body: SlotValidationFiniteValuesRequest = None,
+) -> SlotValidationResult:
+    return implementation.validate_finite_values_entity(body)
+
+
+@app.post('/validate-numeric-entity/', response_model=SlotValidationResult)
+def validate_numeric_entity(
+    body: SlotValidationnumericRequest = None,
+) -> SlotValidationResult:
+    return implementation.validate_numeric_entity(body)
