# python-fastapi-server/app/models.py
@@ -1,10 +1,48 @@
 # generated by datamodel-codegen:
-#   filename:  swagger.yaml
-#   timestamp: 2020-11-01T14:27:28+00:00
+#   filename:  ../swagger.yaml
+#   timestamp: 2020-11-02T18:00:05+00:00
 
-from typing import Optional
+from typing import List, Optional
 
 from pydantic import BaseModel
+
+
+class Value(BaseModel):
+    entity_type: Optional[str] = None
+    value: Optional[str] = None
+
+
+class SlotValidationnumericRequest(BaseModel):
+    invalid_trigger: Optional[str] = None
+    key: Optional[str] = None
+    name: Optional[str] = None
+    reuse: Optional[bool] = None
+    pick_first: Optional[bool] = None
+    type: Optional[List[str]] = None
+    validation_parser: Optional[str] = None
+    numeric: Optional[str] = None
+    var_name: Optional[str] = None
+    values: Optional[List[Value]] = None
+
+
+class SlotValidationFiniteValuesRequest(BaseModel):
+    invalid_trigger: Optional[str] = None
+    key: Optional[str] = None
+    name: Optional[str] = None
+    reuse: Optional[bool] = None
+    support_multiple: Optional[bool] = None
+    pick_first: Optional[bool] = None
+    supported_values: Optional[List[str]] = None
+    type: Optional[List[str]] = None
+    validation_parser: Optional[str] = None
+    values: Optional[List[Value]] = None
+
+
+class SlotValidationResult(BaseModel):
+    filled: Optional[bool] = None
+    partially_filled: Optional[bool] = None
+    trigger: Optional[str] = None
+    parameters: Optional[str] = None
 
 
 class Time(BaseModel):
